--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <!--Fontes-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat&family=Poppins&family=Roboto&family=Ubuntu&display=swap"
     rel="stylesheet">
